# example-webkit2gtk

./: CMakeLists.txt  LICENSE  README.md  code.cpp  flatpak_manifest.yaml  readme.txt  snapcraft.yaml
share/applications/: app.filesqueezer.example.desktop
share/share/metainfo/: app.filesqueezer.example.metainfo.xml
snap/gui/: infosqueezer-develop.desktop
src/: CMakeLists.txt  code.cpp
